// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Stars /> matches snapshot when rendering fetching text 1`] = `
<div>
  <FormattedMessage
    defaultMessage="Fetching Stars.."
    id="stars.fetching"
    values={Object {}}
  />
</div>
`;

exports[`<Stars /> matches snapshot when rendering stars 1`] = `
<div>
  61
</div>
`;
